--- a/views/pizza.html
+++ b/views/pizza.html
@@ -85,6 +85,9 @@
     .container {
       width: 970px;
     }
+    #movingPizzas1 {
+      clear: left;
+    }
   }
   @media (min-width: 1200px) {
     .container {
